--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 height: 100%;
                 overflow: hidden;
             }
+            body {
+                background: #042000;
+            }
             #img-background {
                 width: 100%;
                 height: 100%;
