deleted "classica" list

--- a/index.html
+++ b/index.html
@@ -115,16 +115,10 @@
                                 <p class="link-title">PSYCH</p>
                             </a>
                         </li>
-
-                        <li class="link-item">
-                            <a class="link-link" target="_blank" href="https://open.spotify.com/user/ribas_oasis/playlist/1AjwIHVGSMLAoGuZFwaUPg">
-                                <p class="link-title">CLASSICA</p>
-                            </a>
-                        </li>
-
+                        
                         <li class="link-item">
                             <a class="link-link" target="_blank" href="https://open.spotify.com/user/ribas_oasis/playlist/4XrPdZQzvsvlGrLk02ZHpd">
-                                <p class="link-title">JAZZY</p>
+                                <p class="link-title">JAZZY & CLASSICA</p>
                             </a>
                         </li>
 
